--- a/src/drama-blog.html
+++ b/src/drama-blog.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link href="/assets/styles/mainapp.css" rel="stylesheet">
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+  <![endif]-->
+  <link rel="shortcut icon" href="#" type="image/x-icon">
+
+  <meta name="description" content="ABow 的追劇生活 - 記載著 ABow 追劇的點點滴滴">
+  <meta name="author" content="Will Huang">
+
+  <title>ABow 的追劇生活</title>
+
+</head>
+
+<body>
+
     <!-- Header START -->
     <header class="header">
       <div class="navbar navbar-inverse" role="navigation">
@@ -27,10 +51,10 @@
 
           <img src="/assets/images/logo.png" class="pull-left logo" alt="The Will Will Web">
 
-          <div class="pull-left">
+          <hgroup class="pull-left">
             <h1><a href="http://blog.miniasp.com/">ABow 的追劇生活</a></h1>
             <h3>記載著 ABow 追劇的點點滴滴</h3>
-          </div>
+          </hgroup>
 
           <div id="social-icons" class="pull-right social-icon">
             <a href="#" title="ABow 的追劇生活粉絲專頁" target="_blank">
@@ -285,3 +309,6 @@
       </div>
     </footer>
     <!-- Footer END -->
+
+</body>
+</html>
