Update the Text interpolation sample

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <link rel="shortcut icon" href="#" type="image/x-icon">
 
   <meta name="description" content="ABow 的追劇生活 - 記載著 ABow 追劇的點點滴滴">
-  <meta name="author" content="Will Huang">
+  <meta name="author" content="ABow Chen">
 
   <title>ABow 的追劇生活</title>
 </head>
