--- a/src/drama-blog.html
+++ b/src/drama-blog.html
@@ -14,7 +14,7 @@
   <link rel="shortcut icon" href="#" type="image/x-icon">
 
   <meta name="description" content="ABow 的追劇生活 - 記載著 ABow 追劇的點點滴滴">
-  <meta name="author" content="Will Huang">
+  <meta name="author" content="ABow Chen">
 
   <title>ABow 的追劇生活</title>
 
@@ -165,7 +165,7 @@
               <div class="widget-content">
                 <div style="text-align: center">
                   <div id="calendarContainer">
-                    <table class="calendar" summary="" style=";border-collapse:collapse;">
+                    <table class="calendar" summary="" style="border-collapse:collapse;">
                       <tbody>
                         <tr>
                           <td><a href="#">&lt;&lt;</a>&nbsp;&nbsp;</td>
